@@ -15,5 +15,8 @@ CORRECTED BUGS:
 - Bug with execution fail in case of wrong number of initial medians and in case of the same objects with several initial medians (pyclustering.cluster.kmedians).
   See: https://github.com/annoviko/pyclustering/issues/256
 
-- But with execution fail in case of clustering the same objects (pyclustering.cluster.kmedoids).
+- Bug with execution fail in case of clustering the same objects (pyclustering.cluster.kmedoids).
   See: https://github.com/annoviko/pyclustering/issues/272
+ 
+- Bug with calculation synchronous ensembles near by zero: oscillators 2*pi and 0 are considered as different (pyclustering.nnet.sync, ccore.sync).
+  See: https://github.com/annoviko/pyclustering/issues/267
